# stsbot

./: .gitignore  .gitmodules  README.md
arduino/: README.md  platformio.ini
arduino/include/: bot.h  main.h  motor.h
arduino/src/: bot.cpp  main.cpp  motor.cpp
arduino/test/: old_main.cpp
docker/: README.md  build.sh  run.sh
eaibot_base/: CMakeLists.txt  package.xml
eaibot_base/include/eaibot_base/: diffdrive_eaibot.h  motor_driver.h  wheel.h
eaibot_base/src/: diffdrive_eaibot.cpp  motor_driver.cpp  wheel.cpp
eaibot_bringup/: CMakeLists.txt  package.xml
eaibot_bringup/launch/: eaibot.launch.py  rplidar.launch.py  teleop_keyboard.launch.py
eaibot_control/: CMakeLists.txt  package.xml
eaibot_control/config/: eaibot_controllers.yaml
eaibot_control/launch/: eaibot_control.launch.py
eaibot_description/: CMakeLists.txt  package.xml
eaibot_description/launch/: eaibot_description.launch.py  view_eaibot.launch.py
eaibot_description/urdf/: eaibot.urdf.xacro
eaibot_description/urdf/include/: common_macros.urdf.xacro  common_sensors.urdf.xacro  eaibot_caster_macro.urdf.xacro  eaibot_control.urdf.xacro
eaibot_firmware/: platformio.ini
eaibot_firmware/include/: app.h  constants.h  encoder.h  hw.h  motor.h  pcint.h  pid.h
eaibot_firmware/src/: app.cpp  encoder.cpp  main.cpp  motor.cpp  pcint.cpp  pid.cpp
eaibot_gz_classic/: CMakeLists.txt  package.xml
eaibot_gz_classic/launch/: eaibot_one_robot.launch.py  spawn_robot.launch.py
eaibot_gz_classic/urdf/: eaibot_gz_classic.xacro
eaibot_navigation/: CMakeLists.txt  package.xml
eaibot_navigation/launch/: bringup.launch.py  eaibot_simulation_navigation.launch.py
eaibot_navigation/params/: nav2_params.yaml
eaibot_slam/: CMakeLists.txt  package.xml
eaibot_slam/launch/: rviz.launch.py  slam_toolbox_online_async.launch.py
eaibot_tools/startup/: initenv.sh
esp32/: README.md  platformio.ini
esp32/src/: main.cpp
others/eaibot_firmware/: README.md
others/eaibot_firmware/include/: app.h  commands.h  encoder.h  motor.h  pinout.h
others/eaibot_firmware/src/: app.cpp  encoder.cpp  pid.cpp
ros/: README.md
ros/src/stsbot_bringup/launch/: stsbot_bringup.launch.py
ros/src/stsbot_cartographer/: CMakeLists.txt  package.xml
ros/src/stsbot_cartographer/launch/: cartographer.launch.py  cartographer_pure_laser.launch.py
ros/src/stsbot_cartographer/map/: stsbot_map.yaml  stsbot_map_fish_home.yaml
ros/src/stsbot_description/: package.xml  setup.cfg  setup.py
ros/src/stsbot_navigation2/: CMakeLists.txt  package.xml
ros/src/stsbot_navigation2/config/: ekf.yaml
ros/src/stsbot_navigation2/launch/: navigation2.launch.py  odom_ekf.launch.py
ros/src/stsbot_navigation2/maps/: show_pgm.py  stsbot_map.yaml  stsbot_map_fish_home.yaml  stsbot_map_fish_home_pure_laser.yaml
ros/src/stsbot_qt/: CMakeLists.txt  package.xml
ros/src/stsbot_qt/include/: eForm.h  locate.h  mainwindow.h
ros/src/stsbot_qt/resource/: res.qrc
ros/src/stsbot_qt/src/: eForm.cpp  locate.cpp  mainwindow.cpp
ros/src/stsbot_qt/ui/: eForm.ui  locate.ui  mainwindow.ui
ros/src/ydlidar_ros2_driver/params/: ydlidar.yaml
src/stsbot_bringup/: CMakeLists.txt  package.xml
src/stsbot_bringup/src/: stsbot_bringup.cpp
src/stsbot_description/urdf/: stsbot_v1.0.0.urdf
stsbot_firmware/include/: encoder.h  motor.h  pcint.h
stsbot_firmware/src/: motor.cpp  pcint.cpp
