cmake_minimum_required(VERSION 3.8)
project(eaibot_bringup)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rplidar_ros REQUIRED)
find_package(teleop_twist_joy REQUIRED)
find_package(joy_linux REQUIRED)
find_package(twist_mux REQUIRED)
find_package(v4l2_camera REQUIRED)
find_package(laser_filters REQUIRED)
find_package(rosbag2_storage_mcap REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
