<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eaibot_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files to bring up eaibot.</description>
  <maintainer email="huigang39@outlook.com">Huigang Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rplidar_ros</depend>
  <depend>teleop_twist_joy</depend>
  <depend>joy_linux</depend>
  <depend>twist_mux</depend>
  <depend>v4l2_camera</depend>
  <depend>laser_filters</depend>
  <depend>rosbag2_storage_mcap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
