<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>eaibot_control</name>
    <version>0.1.0</version>
    <description>ROS Control</description>
    <maintainer email="huigang39@outlook.com">Huigang Wang</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>eaibot_base</exec_depend>
    <exec_depend>eaibot_description</exec_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>ros2controlcli</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
